www/css/me-carousel.scss
@import "./_shadows.scss";

form {
  @include shadow;
  position: relative;
  width: 600px;
  max-width: 100%;
  height: fit-content;
  background: white;
  img {
    filter: var(--col-img-filter);
    transition: all 0.35s;
  }
  &:hover img {
    filter: none;
  }
  ol {
    width: 100%;
    height: fit-content;
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    list-style: none;
    input {
      display: none;
    }
    input:checked + li {
      width: 100%;
    }
    input:checked + li section img {
      opacity: 1;
      animation: fade 0.5s forwards;
      @keyframes fade {
        0% {
          opacity: 0.9;
        }
        100% {
          opacity: 1;
        }
      }
    }
    input:not(:checked) + li section {
      display: none;
    }
    @for $i from 1 through 10 {
      input#carousel__input--#{$i}:checked
        ~ .controls
        label[for="carousel__input--#{$i}"] {
        background-color: white;
      }
    }
    li:not(.controls) {
      height: fit-content;
      background: white;
      aspect-ratio: 16/13.5;
      &::marker {
        display: none;
        content: "";
        position: absolute;
      }
      section {
        border: 10px solid white;
        width: calc(100% - 20px - 32px);
        padding: 16px;
        img {
          width: 100%;
          object-fit: cover;
          aspect-ratio: 16/9;
        }
        p,
        figcaption {
          color: rgb(var(--black));
        }
        figcaption {
          &:nth-of-type(1) {
            font-family: "Permanent Marker";
            font-size: 36px;
            font-display: swap;
            text-align: center;
            margin: 16px 0px;
          }
        }
        p {
          font-family: "Chewy";
          font-display: swap;
        }
      }
    }
    .controls {
      position: absolute;
      width: 100%;
      aspect-ratio: 16/9;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: flex-end;
      > * {
        margin-bottom: 16px;
      }
      .labels {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        gap: 2px;
        height: 40px;
        label {
          display: block;
          width: 1rem;
          height: 1rem;
          background-color: #111;
          border-radius: 50%;
          cursor: pointer;
        }
      }
      button {
        font-family: "Permanent Marker";
        font-size: 40px;
        font-display: swap;
        padding: 0;
        border-radius: 50%;
        background: rgb(var(--white));
        border: 2px outset;
        border-color: rgba(var(--white), 40%);
        width: 40px;
        height: 40px;
        cursor: pointer;
        color: rgb(var(--black));
        &:active {
          border: 2px inset;
          border-color: rgb(var(--white), 40%);
        }
        span {
          position: relative;
          bottom: 16px;
        }
        &.button--prev {
          margin-left: 48px;
        }
        &.button--next {
          margin-right: 48px;
          right: 0;
          span {
            right: -3px;
          }
        }
      }
    }
  }
}

